Codice lezione UNIT1 settimana 1 giorno 3

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 		<!-- Saranno applicate le regole del foglio di stile perché è l'ultimo chiamato -->
 	</head>
 	<body>
+		<nav>
+			<a href="seconda.html" title="Seconda pagina">Seconda</a>
+		</nav>
+
 		<h1 class="montserrat">
 			<span class="material-symbols-outlined">where_to_vote</span>
 			Hello World!
