--- a/seconda.html
+++ b/seconda.html
@@ -92,11 +92,11 @@
         <h2>Elenco studenti</h2>
 
         <ul class="lista">
-            <li>Diana Friptuleac</li>
-            <li>Alessandro Varchetta</li>
-            <li>Paolo Pellizzari</li>
-            <li>Ismaele Dornetto</li>
-            <li>Yuri Lenzi</li>
+            <li>Mario Rossi</li>
+            <li>Aldo Bianchi</li>
+            <li>Maria Neri</li>
+            <li>Anna Gialli</li>
+            <li>Giovanna Verdi</li>
         </ul>
 
 	</body>
